# rcl

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: benchmark.yml  ci.yml
bench/: 500_keys.json  big_string.json  long_string_obj.json  mixed_100.json  numbers.json
dev/bench/: data.js
src/: array.c  array.h  array_test.c  hashtable.c  hashtable.h  hashtable_test.c  json.c  json_bench.c  json_test.c  rcl.c  rcl.h  rcl_string.c  rcl_string_test.c  rcl_test.c  string.c  string_test.c
src/rcl/: array.h  hashtable.h  json.h  string.h
subprojects/: cjson.wrap
subprojects/packagefiles/cjson/: meson.build
